test/error/lexer_files/unterminated_char.err
File "lexer_files/unterminated_char.st", line 1, character 6:
1 | x := '
         ^
Error: Lexing error.
Hint: Unterminated char.
